# bazel-java-monorepo

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.bazel.md  buf.yaml  go.mod  maven_install.json  package.json
.aspect/bazelrc/: BUILD.bazel
.aspect/cli/: config.yaml
proto/: BUILD.bazel  hello.proto
services/golangy/: BUILD.bazel  main.go
services/javaeryryy/: BUILD.bazel
services/javaeryryy/com/example/main/: AnalysisService.java  AnalyzeHandler.java  AppModule.java  Main.java
services/javaeryryy/com/example/test/: AnalysisServiceTest.java  AppModuleTest.java  MainTest.java
services/test-graal/: BUILD.bazel  Main.java
tools/: BUILD.bazel
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
