load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "tutorialpb_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

buf_lint_test(
    name = "tutorialpb_proto_lint",
    config = "//:buf.yaml",
    targets = [":tutorialpb_proto"],
)
